argocd/hiae/prd/manifests/apps/np-api-gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: np-api-gateway
  name: np-api-gateway
  namespace: apps-np-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: np-api-gateway
  template:
    metadata:
      labels:
        app: np-api-gateway
    spec:
      containers:
      - image: 264221247403.dkr.ecr.sa-east-1.amazonaws.com/np-api-gateway:2c3942
        imagePullPolicy: IfNotPresent
        name: np-api-gateway-app
        ports:
        - containerPort: 3000
          protocol: TCP
