argocd/hiae/prd/manifests/apps/np-api-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: np-api-gateway
  namespace: apps-np-api
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: np-api-gateway
