argocd/hiae/prd/manifests/apps/np-api-gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: np-api-gateway
  namespace: apps-np-api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect-to-https@kubernetescrd
spec:
  tls:
  - hosts:
    - gateway-api-hoobox.einstein.br
    secretName: gateway-api-hoobox-one-tls
  rules:
  - host: gateway-api-hoobox.einstein.br
    http:
      paths:
      - backend:
          service:
            name: np-api-gateway
            port:
              number: 80
        path: /
        pathType: Prefix
